<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:contentDescription="@string/content_description_detail_overview"
        android:id="@+id/detailsOverviewImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_directions_run_black_24dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/detailOverviewBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        tools:text="Overview Overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detailsOverviewHeader"
        app:layout_constraintTop_toBottomOf="@+id/detailsOverviewHeader"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/detailsOverviewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/detail_overview"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detailsOverviewImage"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <View
        android:id="@+id/divider"
        android:layout_width="784dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailOverviewBody" />

    <TextView
        android:contentDescription="@string/content_description_release_overview"
        android:id="@+id/detailsReleaseOverview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        tools:text="Release Overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detailsReleaseHeader"
        app:layout_constraintTop_toBottomOf="@+id/detailsReleaseHeader"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/detailsReleaseHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/details_release_date"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detailsReleaseImage"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:visibility="visible" />

    <ImageView
        android:contentDescription="@string/content_description_release_overview"
        android:id="@+id/detailsReleaseImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/ic_schedule_black_24dp"
        tools:visibility="visible" />

    <View
        android:id="@+id/divider2"
        android:layout_width="784dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsReleaseOverview" />

    <ImageView
        android:contentDescription="@string/content_description_ratings_overview"
        android:id="@+id/detailsRatingImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:srcCompat="@drawable/ic_thumb_up_black_24dp"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/detailsRatingHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/details_rating"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detailsRatingImage"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        tools:visibility="visible" />

    <RatingBar
        android:id="@+id/detailsRatingBar"
        style="@style/RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:isIndicator="false"
        android:numStars="10"
        android:stepSize="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/detailsRatingHeader"
        app:layout_constraintTop_toBottomOf="@+id/detailsRatingHeader"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/detailsVoteCountBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        tools:text="Vote Count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detailsRatingHeader"
        app:layout_constraintTop_toBottomOf="@+id/detailsRatingBar"
        tools:visibility="visible" />

    <View
        android:id="@+id/divider3"
        android:layout_width="784dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsVoteCountBody" />

    <ProgressBar
        android:id="@+id/detailProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />


    <ImageView
        android:contentDescription="@string/content_description_genre_overview"
        android:id="@+id/detailGenreImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailProgressBar"
        app:srcCompat="@drawable/ic_label_black_24dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/detailGenreHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/detail_genre"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detailGenreImage"
        app:layout_constraintTop_toBottomOf="@+id/detailProgressBar"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/detailGenreBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        tools:text="Genre Overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detailGenreHeader"
        app:layout_constraintTop_toBottomOf="@+id/detailGenreHeader"
        tools:visibility="visible" />

    <View
        android:id="@+id/divider4"
        android:layout_width="784dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailGenreBody" />

    <TextView
        android:id="@+id/detailBudgetBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        tools:text="Budget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detailBudgetHeader"
        app:layout_constraintTop_toBottomOf="@+id/detailBudgetHeader" />

    <TextView
        android:id="@+id/detailBudgetHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/details_budget_revenue"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detailBudgetImage"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <ImageView
        android:contentDescription="@string/content_description_budget_overview"
        android:id="@+id/detailBudgetImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4"
        app:srcCompat="@drawable/ic_attach_money_black_24dp" />

    <TextView
        android:id="@+id/detailRevenueBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        tools:text="Revenue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/detailBudgetHeader"
        app:layout_constraintTop_toBottomOf="@+id/detailBudgetBody" />

    <TextView
        android:id="@+id/detailLanguageHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/details_spoken_languages"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detailLanguageImage"
        app:layout_constraintTop_toBottomOf="@+id/divider9" />

    <TextView
        android:id="@+id/detailLanguageBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        tools:text="Languages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/detailLanguageHeader"
        app:layout_constraintTop_toBottomOf="@+id/detailLanguageHeader" />


    <ImageView
        android:contentDescription="@string/content_description_language_overview"
        android:id="@+id/detailLanguageImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider9"
        app:srcCompat="@drawable/ic_language_black_24dp" />

    <View
        android:id="@+id/divider9"
        android:layout_width="784dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailRevenueBody" />

    <View
        android:id="@+id/divider10"
        android:layout_width="784dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailLanguageBody" />

    <TextView
        android:id="@+id/detailRuntimeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/runtime"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detailRuntimeImage"
        app:layout_constraintTop_toBottomOf="@+id/divider10" />


    <TextView
        android:id="@+id/detailRuntimeBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        tools:text="Runtime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detailRuntimeHeader"
        app:layout_constraintTop_toBottomOf="@+id/detailRuntimeHeader" />


    <ImageView
        android:contentDescription="@string/content_description_runtime_overview"
        android:id="@+id/detailRuntimeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider10"
        app:srcCompat="@drawable/ic_timelapse_black_24dp" />

    <android.support.constraint.Group
        android:visibility="gone"
        android:id="@+id/detailGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="detailRuntimeBody,detailBudgetHeader,detailLanguageImage,detailLanguageBody,detailBudgetBody,divider10,detailRuntimeImage,detailBudgetImage,divider4,detailGenreHeader,detailRevenueBody,detailGenreImage,detailLanguageHeader,divider9,detailGenreBody,detailRuntimeHeader" />

</android.support.constraint.ConstraintLayout>